{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 190,
  "lineage": "b62cb1f6-1be8-c8e1-fab6-6ce497413ad5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-067c21fb1979f0b27",
            "arn": "arn:aws:ec2:ap-south-1:048553884987:instance/i-0a9cbbd715ac4a5e0",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9cbbd715ac4a5e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx__key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-023f7dc01ba9d1f68",
            "private_dns": "ip-10-100-1-153.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.1.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e35a3440e83e8c12",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4bcc72ee364b9b3",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06a3208b6c7e2cac7"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-067c21fb1979f0b27",
            "arn": "arn:aws:ec2:ap-south-1:048553884987:instance/i-07bf5c5a70add0d35",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07bf5c5a70add0d35",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx__key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c896c6f82555182",
            "private_dns": "ip-10-100-1-233.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.1.233",
            "public_ip": "15.207.120.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08351334b01f437ca",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4bcc72ee364b9b3",
            "tags": {
              "Name": "test"
            },
            "tags_all": {
              "Name": "test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06a3208b6c7e2cac7"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048553884987:vpc/vpc-0aa7f777ff2bdd2b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-00b10d053ccb6579a",
            "default_route_table_id": "rtb-0388cd41389c6fefd",
            "default_security_group_id": "sg-085f57923e06aca5d",
            "dhcp_options_id": "dopt-041be495e8cb8c087",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aa7f777ff2bdd2b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0388cd41389c6fefd",
            "owner_id": "048553884987",
            "tags": {
              "Name": "Primary",
              "description": "main vpc for demo project"
            },
            "tags_all": {
              "Name": "Primary",
              "description": "main vpc for demo project"
            }
          }
        }
      ]
    },
    {
      "module": "module.nginx_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-019ae1aab5abe98a1",
            "arn": "arn:aws:ec2:ap-south-1:048553884987:instance/i-00282290f7191f13b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00282290f7191f13b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx__key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-042a16005a8305fd1",
            "private_dns": "ip-10-100-1-26.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.1.26",
            "public_ip": "52.66.229.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-05c86a1b9c9047f69",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4bcc72ee364b9b3",
            "tags": {
              "Name": "nginx_server",
              "description": "Ec2 server for demo project"
            },
            "tags_all": {
              "Name": "nginx_server",
              "description": "Ec2 server for demo project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06a3208b6c7e2cac7"
            ]
          },
          "dependencies": [
            "aws_vpc.primary",
            "module.nginx_server.aws_key_pair.nginx_server_key",
            "module.nginx_server.aws_security_group.ssh_sg",
            "module.primary_subnet.aws_subnet.Primary_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048553884987:security-group/sg-06a3208b6c7e2cac7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a3208b6c7e2cac7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "nginx ui",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from local",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_sg",
            "name_prefix": "",
            "owner_id": "048553884987",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh_sg"
            },
            "tags_all": {
              "Name": "ssh_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa7f777ff2bdd2b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "module": "module.primary_subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048553884987:internet-gateway/igw-03a342167183e0424",
            "id": "igw-03a342167183e0424",
            "owner_id": "048553884987",
            "tags": {
              "Name": "Primary"
            },
            "tags_all": {
              "Name": "Primary"
            },
            "vpc_id": "vpc-0aa7f777ff2bdd2b8"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "module": "module.primary_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "primary_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048553884987:route-table/rtb-098ae96fa0992337b",
            "id": "rtb-098ae96fa0992337b",
            "owner_id": "048553884987",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a342167183e0424",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Primary_route_table"
            },
            "tags_all": {
              "Name": "Primary_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa7f777ff2bdd2b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary",
            "module.primary_subnet.aws_internet_gateway.primary"
          ]
        }
      ]
    },
    {
      "module": "module.primary_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "primary_route_table_primary_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092030d5cfbb4579e",
            "route_table_id": "rtb-098ae96fa0992337b",
            "subnet_id": "subnet-0d4bcc72ee364b9b3"
          },
          "dependencies": [
            "aws_vpc.primary",
            "module.primary_subnet.aws_internet_gateway.primary",
            "module.primary_subnet.aws_route_table.primary_route_table",
            "module.primary_subnet.aws_subnet.Primary_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.primary_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Primary_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048553884987:subnet/subnet-0d4bcc72ee364b9b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4bcc72ee364b9b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "048553884987",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Primary_subnet",
              "description": "main subnet for demo project"
            },
            "tags_all": {
              "Name": "Primary_subnet",
              "description": "main subnet for demo project"
            },
            "vpc_id": "vpc-0aa7f777ff2bdd2b8"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    }
  ]
}